--- a/build_production/charity/index.html
+++ b/build_production/charity/index.html
@@ -7,7 +7,7 @@
 <title>Charity Partner | SHE Awards 2020</title>
 <meta name="description" content="We are delighted to announce that the Lighthouse Construction Industry Charity this year&#039;s SHE Awards charity partner.">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700;900&display=swap" rel="stylesheet" rel="preload">
-<link rel="stylesheet" href="http://archives.westernbusinesspublishing.co.uk/she-awards/build_production/assets/css/main.css?id=52509275f848ddd1d44c">
+<link rel="stylesheet" href="http://archives.westernbusinesspublishing.co.uk/she-awards/build_production/assets/css/main.css?id=63ef0ec930cd9e5e9329">
 <link rel="apple-touch-icon" sizes="180x180" href="http://archives.westernbusinesspublishing.co.uk/she-awards/build_production/assets/images/meta/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="http://archives.westernbusinesspublishing.co.uk/she-awards/build_production/assets/images/meta/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="http://archives.westernbusinesspublishing.co.uk/she-awards/build_production/assets/images/meta/favicon-16x16.png">
@@ -191,7 +191,7 @@
 					<p class="mt-6 md:mt-6 md:pr-4">The Lighthouse Construction Industry Charity is the only charity that provides financial and emotional support to the construction community and their families who have suffered an injury, illness or just need some extra support.</p>									
 		
 					<div class="w-full flex justify-center mt-6 md:w-1/2 md:float-right md:ml-6 md:mb-6 lg:ml-8 lg:mb-8">
-						<img src="/assets/images/layout/charity-partner-lighthouse-club-logo.svg" alt="The Lighthouse Club" class="w-3/5 sm:w-1/2 md:w-2/3">
+						<img src="http://archives.westernbusinesspublishing.co.uk/she-awards/build_production/assets/images/layout/charity-partner-lighthouse-club-logo.svg" alt="The Lighthouse Club" class="w-3/5 sm:w-1/2 md:w-2/3">
 					</div>
 			
 					<p class="mt-6">The charity provides a 24 /7 Construction Industry Helpline which is the first point of contact to access a range of completely free and confidential support services including:</p>					
@@ -453,10 +453,10 @@
 
                     <div class="flex items-start mt-3">
                         <div class="flex w-full text-white tracking-tight">
-                            <a class="h-8 w-8" href="https://www.linkedin.com/company/air-user-live" target="_blank" rel="noopener">
+                            <a class="h-8 w-8" href="https://www.linkedin.com/company/the-safety-health-excellence-awards" target="_blank" rel="noopener">
                                <img src="http://archives.westernbusinesspublishing.co.uk/she-awards/build_production/assets/images/icons/linkedin-icon.svg" alt="LinkedIn">
                             </a>
-                            <a class="h-8 w-8 ml-2" href="https://twitter.com/AirUserLive" target="_blank" rel="noopener">
+                            <a class="h-8 w-8 ml-2" href="https://twitter.com/she_awards" target="_blank" rel="noopener">
                                 <img src="http://archives.westernbusinesspublishing.co.uk/she-awards/build_production/assets/images/icons/twitter-icon.svg" alt="Twitter">
                             </a>
                         </div>
