--- a/build_production/index.html
+++ b/build_production/index.html
@@ -7,7 +7,7 @@
 <title>Home | SHE Awards 2020</title>
 <meta name="description" content="Join more than 550 of your peers for a not to be missed evening that celebrates excellence in health and safety!">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700;900&display=swap" rel="stylesheet" rel="preload">
-<link rel="stylesheet" href="http://archives.westernbusinesspublishing.co.uk/she-awards/build_production/assets/css/main.css?id=52509275f848ddd1d44c">
+<link rel="stylesheet" href="http://archives.westernbusinesspublishing.co.uk/she-awards/build_production/assets/css/main.css?id=63ef0ec930cd9e5e9329">
 <link rel="apple-touch-icon" sizes="180x180" href="http://archives.westernbusinesspublishing.co.uk/she-awards/build_production/assets/images/meta/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="http://archives.westernbusinesspublishing.co.uk/she-awards/build_production/assets/images/meta/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="http://archives.westernbusinesspublishing.co.uk/she-awards/build_production/assets/images/meta/favicon-16x16.png">
@@ -797,10 +797,10 @@ function stopVideo() {
 
                     <div class="flex items-start mt-3">
                         <div class="flex w-full text-white tracking-tight">
-                            <a class="h-8 w-8" href="https://www.linkedin.com/company/air-user-live" target="_blank" rel="noopener">
+                            <a class="h-8 w-8" href="https://www.linkedin.com/company/the-safety-health-excellence-awards" target="_blank" rel="noopener">
                                <img src="http://archives.westernbusinesspublishing.co.uk/she-awards/build_production/assets/images/icons/linkedin-icon.svg" alt="LinkedIn">
                             </a>
-                            <a class="h-8 w-8 ml-2" href="https://twitter.com/AirUserLive" target="_blank" rel="noopener">
+                            <a class="h-8 w-8 ml-2" href="https://twitter.com/she_awards" target="_blank" rel="noopener">
                                 <img src="http://archives.westernbusinesspublishing.co.uk/she-awards/build_production/assets/images/icons/twitter-icon.svg" alt="Twitter">
                             </a>
                         </div>
